--- a/demo.html
+++ b/demo.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: aquamarine;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Akanksha</h1>
+    <h1>Vaishnavi</h1>
 </body>
 </html>
