--- a/demo.html
+++ b/demo.html
@@ -9,11 +9,17 @@
         body{
             background-color: aquamarine;
         }
+        img{
+            width: 100px;
+            height: 50px;
+        }
     </style>
 </head>
 <body>
     <h1>Akanksha</h1>
     <h1>Vaishnavi</h1>
+    <img src="https://freepngimg.com/download/pizza/34833-1-pizza-slice-transparent-background.png" alt="">
+    <p id="hi"></p>
     <script src="demo.js"></script>
 </body>
 </html>
