--- a/demo.html
+++ b/demo.html
@@ -16,10 +16,13 @@
     </style>
 </head>
 <body>
-    <h1>Akanksha</h1>
+    <!-- <h1>Akanksha</h1> -->
     <h1>Vaishnavi</h1>
     <img src="https://freepngimg.com/download/pizza/34833-1-pizza-slice-transparent-background.png" alt="">
     <p id="hi"></p>
+    <button onclick="hi()">
+    Click
+</button>
     <script src="demo.js"></script>
 </body>
 </html>
